--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://example.org"
-title = "Dimension"
+title = "Hi, Im TakuSemba"
 theme = "dimension"
 languageCode = "en-us"
 defaultContentLanguage = "en"
@@ -7,8 +7,7 @@ enableRobotsTXT = true
 disableKinds=["RSS"]
 
 [params]
-  description = '<!--[-->A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<!--]--><br />
-                <!--[-->for free under the <a href="https://html5up.net/license">Creative Commons</a> license.<!--]-->'
+  description = '<!--[--><h3>I Love Internet. Im a Android developer.</h3><!--]-->'
   logo = "fa-diamond"
   copyright = "Untitled"
 
@@ -36,11 +35,3 @@ disableKinds=["RSS"]
 [languages.en]
 languageName = "English"
 weight = 1
-
-[languages.de]
-languageName = "Deutsch"
-weight = 2
-title = "Dimension"
-description = '<!--[-->A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<!--]--><br />
-                <!--[-->for free under the <a href="https://html5up.net/license">Creative Commons</a> license.<!--]-->'
-
