--- a/config.toml
+++ b/config.toml
@@ -13,22 +13,22 @@ disableKinds=["RSS"]
 [[params.social]]
   medium = "twitter"
   icon = "twitter"
-  link = "#"
+  link = "https://twitter.com/takusemba"
 
 [[params.social]]
   medium = "facebook"
   icon = "facebook"
-  link = "#"
+  link = "https://www.facebook.com/takusemba"
 
 [[params.social]]
   medium = "instagram"
   icon = "instagram"
-  link = "#"
+  link = "https://www.instagram.com/taku_semba"
 
 [[params.social]]
   medium = "github"
   icon = "github"
-  link = "#"
+  link = "https://github.com/TakuSemba"
 
 [languages]
 [languages.en]
