public directory created

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://example.org"
+baseurl = "https://s3-ap-northeast-1.amazonaws.com/takusemba.com"
 title = "Hi, Im TakuSemba"
 theme = "dimension"
 languageCode = "en-us"
