--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ theme = "hello-friend-ng"
   disableReadOtherPosts = false
 
   # Metadata mostly used in document's head
-  description = "Homepage and blog by Djordje Atlialp"
+  description = "TakuSemba's Portfolio"
   keywords = "homepage, blog, science, informatics, development, programming"
   images = [""]
 
